07-Jul-2013 Added an argument to CommandLineProcessor.ICommandLineSupport.ToCommandLineArguments, that is either null, or an Opus.Core.StringArray, of names of options to NOT process. If options have been manually extracted from an OptionCollection, but a general run through of the command line arguments is needed, then this can be used to exclude those already processed.

07-Jul-2013 Added property Opus.Core.BaseOptionCollection.OptionNames to provide an array of strings for the options names.

05-Jul-2013 Reworked the QMakeBuilder support, now supporting debug & release .pro files. Dynamic libraries on Windows must write their import library to the same folder as the DLL.

05-Jul-2013 Opus.Core.StringArray now has a construct taking an Opus.Core.Array<string>. And added a ToString(char) overload to format the string array as a single string, separated by char.

05-Jul-2013 Added Opus.Core.FileCollection.ToStringArray()

05-Jul-2013 Added Union, Intersect and Complement functions to Opus.Core.Array for set notation operations.

05-Jul-2013 Added Opus.Core.Array.AddRangeUnique to avoid duplicate additions.

18-Jun-2013 Add Opus.Core.ModuleUtilities.GetNode, which returns the DependencyNode for a given module type and BaseTarget. This can be useful in builder code.

12-Jun-2013 Dependent nodes that have to move ranks, must take into account if the dependee has nested components.

12-Jun-2013 Updated OpenCL package to the new ThirdParty module scheme.

12-Jun-2013 Fixed GLEW-1.5.7 package for mingw builds, and added two test packages to the mingw test suite.

12-Jun-2013 Updated OpenGLSDK package to the new ThirdParty module scheme.

12-Jun-2013 Updated Direct3D9 module in the DirectX package to the new ThirdParty module scheme.

11-Jun-2013 QtCommon and Qt-4.7.1 updated to follow the new ThirdParty module scheme, demonstrating the ease of copying files in Test13.
